--- a/index.html
+++ b/index.html
@@ -7,32 +7,48 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<header>
+    <h1>Laundry Bee</h1>
+</header>
+
 <div class="container">
-    <h1>Laundry Bee - Create Order</h1>
+    <h2>New Order</h2>
 
-    <div class="form-section">
-        <label>Name:</label>
-        <input type="text" id="customerName" placeholder="Enter customer name">
+    <label>Customer Name</label>
+    <input id="customer" type="text" placeholder="Enter customer name" />
 
-        <label>Phone:</label>
-        <input type="text" id="phone" placeholder="Phone number">
+    <label>Phone Number</label>
+    <input id="phone" type="text" placeholder="Enter phone number" />
 
-        <label>Drop-off Time:</label>
-        <input type="datetime-local" id="dropoffTime">
+    <label>Weight (kg)</label>
+    <input id="weight" type="number" placeholder="Kg" />
 
-        <label>Pickup Time:</label>
-        <input type="datetime-local" id="pickupTime">
+    <label>Price per kg</label>
+    <input id="price" type="number" value="15000" />
 
-        <label>Total Price (VND):</label>
-        <input type="number" id="price" placeholder="Enter amount">
+    <label>Received Date</label>
+    <input id="received" type="date" />
 
-        <label>Note:</label>
-        <textarea id="note" rows="3" placeholder="Any notes..."></textarea>
+    <label>Return Date</label>
+    <input id="return" type="date" />
 
-        <button id="saveBtn">Save Order</button>
+    <button id="addOrder">Add Order</button>
 
-        <a href="summary.html" class="link">View Summary</a>
-    </div>
+    <h2>Orders List</h2>
+    <table>
+        <thead>
+        <tr>
+            <th>Customer</th>
+            <th>Phone</th>
+            <th>Kg</th>
+            <th>Total</th>
+            <th>Received</th>
+            <th>Return</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody id="orderTable"></tbody>
+    </table>
 </div>
 
 <script src="app.js"></script>
