--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <header>
     <h1 id="title">Laundry Bee</h1>
     <button class="lang-btn" onclick="toggleLanguage()">🇬🇧 English / 🇻🇳 Tiếng Việt</button>
+    <button onclick="logout()" class="logout-btn">Đăng xuất</button>
 </header>
 
 <div class="container">
