--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Đăng nhập</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="screens/Login/login.css">
 </head>
 <body>
 
